--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main>
     <div class="info-box">
       <strong>⚠️ Todos los pagos se hacen en persona. No se acepta tarjeta ni pagos en línea.</strong><br />
-      <strong>📍 Dirección para recoger:</strong> 700 Buchanan St, Taft<br />
+      <strong>📍 Dirección para recoger:</strong> Llamen para dirección <br />
       <strong>📞 Teléfono:</strong> 805-748-1588
     </div>
 
